--- a/nvme-rhel-10x.adoc
+++ b/nvme-rhel-10x.adoc
@@ -856,21 +856,21 @@ In the following example, `dhchap_key` corresponds to `dhchap_secret` and `dhcha
             "host_traddr":"192.168.20.21",             
             "trsvcid":"4420",             
             "dhchap_ctrl_key":"DHHC-1:03:5CgWULVnU5HUOwP1MNg95pkiUAwayiO+IvrALZR8HpeJIHw3xyHdGlTnvEJ81HDjBb+fGteUgIn0fj8ASHZIgkuFIx8=:"           
-            },
+          },
           {             
             "transport":"tcp",             
             "traddr":"192.168.21.28",             
             "host_traddr":"192.168.21.21",             
-            "trsvcid":"4420",             ]
+            "trsvcid":"4420",             
             "dhchap_ctrl_key":"DHHC-1:03:5CgWULVnU5HUOwP1MNg95pkiUAwayiO+IvrALZR8HpeJIHw3xyHdGlTnvEJ81HDjBb+fGteUgIn0fj8ASHZIgkuFIx8=:"           
-            },
+          },
           {             
             "transport":"tcp",             
             "traddr":"192.168.21.29",             
             "host_traddr":"192.168.21.21",             
             "trsvcid":"4420",             
             "dhchap_ctrl_key":"DHHC-1:03:5CgWULVnU5HUOwP1MNg95pkiUAwayiO+IvrALZR8HpeJIHw3xyHdGlTnvEJ81HDjBb+fGteUgIn0fj8ASHZIgkuFIx8=:"           
-            }
+          }
         ]
       }
     ]
