--- a/nvme-ol-supported-features.adoc
+++ b/nvme-ol-supported-features.adoc
@@ -58,11 +58,11 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 
 |If your Oracle Linux version is .. | Learn about ..
 |9 series
-|link:nvme-ol-9x.html[Configuring NVMe for Oracle Linux 9x]
+|link:nvme-ol-9x.html[Configuring NVMe for Oracle Linux 9.x]
 |8 series 
-|link:nvme-ol-8x.html[Configuring NVMe for Oracle Linux 8x]
+|link:nvme-ol-8x.html[Configuring NVMe for Oracle Linux 8.x]
 |7 series
-|link:nvme-ol-7x.html[Configuring NVMe for Oracle Linux 7x]
+|link:nvme-ol-7x.html[Configuring NVMe for Oracle Linux 7.x]
 |===
 
 .Related information
