--- a/nvme-rhel-supported-features.adoc
+++ b/nvme-rhel-supported-features.adoc
@@ -61,11 +61,11 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 
 |If your RHEL version is .. | Learn about ..
 |10 series
-|link:nvme-rhel-10x.html[Configuring NVMe for RHEL 10x]
+|link:nvme-rhel-10x.html[Configuring NVMe for RHEL 10.x]
 |9 series
-|link:nvme-rhel-9x.html[Configuring NVMe for RHEL 9x]
+|link:nvme-rhel-9x.html[Configuring NVMe for RHEL 9.x]
 |8 series
-|link:nvme-rhel-8x.html[Configuring NVMe for RHEL 8x]
+|link:nvme-rhel-8x.html[Configuring NVMe for RHEL 8.x]
 |===
 
 .Related information
