--- a/hu-rockylinux-10x.adoc
+++ b/hu-rockylinux-10x.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: hu-rhel-10.html
-keywords: host utilities, red hat, rhel, linux, 10, netapp, ontap, rhel 
-summary: Install Linux Host Utilities on a RHEL 10 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+permalink: hu-rockylinux-10x.html
+keywords: host utilities, rocky, linux, 10.x, netapp, ontap 
+summary: Install Linux Host Utilities on a Rocky Linux 10.x host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-= Configure RHEL 10 for FCP and iSCSI with ONTAP storage
+= Configure Rocky Linux 10.x for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,7 +13,7 @@ summary: Install Linux Host Utilities on a RHEL 10 host to manage FCP and iSCSI 
 :imagesdir: ./media/
 
 [.lead]
-The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Red Hat Enterprise Linux (RHEL) 10 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install Linux Host Utilities on a Rocky Linux 10.x host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
 include::_include/hu/linux-configure-kvm-note.adoc[]
 
@@ -23,7 +23,7 @@ include::_include/hu/install-linux-host-utilities-80.adoc[]
 
 == Step 3: Confirm the multipath configuration for your host
 
-You can use multipathing with RHEL 10 to manage ONTAP LUNs.
+You can use multipathing with Rocky Linux 10.x to manage ONTAP LUNs.
 
 To ensure that multipathing is configured correctly for your host, verify that the `/etc/multipath.conf` file is defined and that you have the NetApp recommended settings configured for your ONTAP LUNs.
 
@@ -145,6 +145,8 @@ include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
 
-//ONTAPDOC-2987 8-May-2025
-//ONTAPDOC-2561 25-Nov-2024
-//ONTAPDOC-1584 1-Feb-2024
+// 2025 JUN 25, ONTAPDOC-3090
+// ONTAPDOC-2987 8-May-2025
+// ONTAPDOC-2561 25-Nov-2024
+// ONTAPDOC-1584 1-Feb-2024
+
