--- a/nvme-ol-8x.adoc
+++ b/nvme-ol-8x.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
 permalink: nvme-ol-8x.html
-keywords: nvme, oracle linux, 8x, host configuration
-summary: NVMe-oF Host Configuration for Oracle Linux 8x with ONTAP
+keywords: nvme, oracle linux, 8.x, host configuration
+summary: NVMe-oF Host Configuration for Oracle Linux 8.x with ONTAP
 ---
-= Configure Oracle Linux 8x with NVMe-oF for ONTAP storage
+= Configure Oracle Linux 8.x with NVMe-oF for ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -15,22 +15,22 @@ summary: NVMe-oF Host Configuration for Oracle Linux 8x with ONTAP
 [.lead]
 include::_include/nvme/nvme-oracle-linux-introduction.adoc[]
 
-Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Oracle Linux 8x. For more support and feature information, see link:nvme-ol-supported-features.html[Oracle Linux ONTAP support and features].
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Oracle Linux 8.x. For more support and feature information, see link:nvme-ol-supported-features.html[Oracle Linux ONTAP support and features].
 
-NVMe-oF with Oracle Linux 8x has the following known limitations:
+NVMe-oF with Oracle Linux 8.x has the following known limitations:
 
 * SAN booting using the NVMe-oF protocol is not supported.
-* NetApp sanlun host utility support isn't available for NVMe-oF on an Oracle Linux 8x host. Instead, you can rely on the NetApp plug-in included in the native `nvme-cli` package for all NVMe-oF transports.
+* NetApp sanlun host utility support isn't available for NVMe-oF on an Oracle Linux 8.x host. Instead, you can rely on the NetApp plug-in included in the native `nvme-cli` package for all NVMe-oF transports.
 * For Oracle Linux 8.2 and earlier, native NVMe/FC auto-connect scripts are not available in the nvme-cli package. Use the HBA vendor provided external auto-connect scripts.
 * For Oracle Linux 8.2 and earlier, round-robin load balancing is not enabled by default for NVMe multipathing. To enable this functionality, go to the step for <<udev-rule,writing a udev rule>>.
 
 == Step 1: Install Oracle Linux and NVMe software and verify your configuration
 
-Use the following procedure to validate the minimum supported Oracle Linux 8x software versions.
+Use the following procedure to validate the minimum supported Oracle Linux 8.x software versions.
 
 .Steps
 
-. Install Oracle Linux 8x on the server. After the installation is complete, verify that you are running the specified Oracle Linux 8x kernel. 
+. Install Oracle Linux 8.x on the server. After the installation is complete, verify that you are running the specified Oracle Linux 8.x kernel. 
 +
 [source,cli]
 ----
@@ -65,7 +65,7 @@ Enable round-robin for NetApp ONTAP
 ACTION=="add", SUBSYSTEMS=="nvme-subsystem", ATTRS{model}=="NetApp ONTAP Controller", ATTR{iopolicy}="round-robin"
 ----
 
-. On the Oracle Linux 8x host, check the `hostnqn` string at `/etc/nvme/hostnqn`: 
+. On the Oracle Linux 8.x host, check the `hostnqn` string at `/etc/nvme/hostnqn`: 
 +
 [source,cli]
 ----
@@ -620,5 +620,5 @@ These are the known issues:
 |===
 |NetApp Bug ID	|Title	|Description
 |link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047^]	
-|Oracle Linux 8x NVMe-oF hosts create duplicate Persistent Discovery Controllers (PDCs)	|On NVMe-oF hosts, you can use the `nvme discover -p` command to create PDCs. When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running Oracle Linux 8x with an NVMe-oF host, a duplicate PDC is created each time `nvme discover -p` is executed. This leads to unnecessary usage of resources on both the host and the target.
+|Oracle Linux 8.x NVMe-oF hosts create duplicate Persistent Discovery Controllers (PDCs)	|On NVMe-oF hosts, you can use the `nvme discover -p` command to create PDCs. When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running Oracle Linux 8.x with an NVMe-oF host, a duplicate PDC is created each time `nvme discover -p` is executed. This leads to unnecessary usage of resources on both the host and the target.
 |===
