--- a/nvme-rockylinux-9x.adoc
+++ b/nvme-rockylinux-9x.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: nvme-rockylinux-96.html
+permalink: nvme-rockylinux-9x.html
 keywords: nvme, rocky, red hat, enterprise
-summary: How to Configure NVMe-oF Host for Rocky Linux 9.6 with ONTAP
+summary: How to Configure NVMe-oF Host for Rocky Linux 9.x with ONTAP
 ---
-= Configure Rocky Linux 9.6 for NVMe-oF with ONTAP storage
+= Configure Rocky Linux 9.x for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -15,9 +15,9 @@ summary: How to Configure NVMe-oF Host for Rocky Linux 9.6 with ONTAP
 [.lead]
 include::_include/nvme/nvme-rocky-linux-introduction.adoc[]
 
-Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 9.6. For more support and feature information, see link:nvme-rockylinux-supported-features.html[Rocky Linux ONTAP support and features].
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 9.x. For more support and feature information, see link:nvme-rockylinux-supported-features.html[Rocky Linux ONTAP support and features].
 
-*NVMe-oF with Rocky Linux 9.6 has the following known limitations:*
+*NVMe-oF with Rocky Linux 9.x has the following known limitations:*
 
 * Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
 
@@ -25,13 +25,13 @@ Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 9.6. Fo
 
 include::_include/nvme/enable-san-booting.adoc[]
 
-== Step 2: Verify the software version and NVMe configuration
+== Step 2: Install Rocky Linux and NVMe software and verify your configuration
 
 include::_include/nvme/verify-software-version-introduction.adoc[]
 
 .Steps
 
-. Install Rocky Linux 9.6 on the server. After the installation is complete, verify that you are running the required Rocky Linux 9.6 kernel: 
+. Install Rocky Linux 9.x on the server. After the installation is complete, verify that you are running the required Rocky Linux 9.x kernel: 
 +
 [source,cli]
 ----
@@ -53,12 +53,10 @@ Configure NVMe/FC with Broadcom/Emulex or Marvell/QLogic adapters, or configure 
 
 [role="tabbed-block"]
 =====
-.FC - Broadcom/Emulex
+.NVMe/FC - Broadcom/Emulex
 --
 
 Configure NVMe/FC for a Broadcom/Emulex adapter.
-
-.Steps
 
 . Verify that you are using the supported adapter model: 
 
@@ -228,12 +226,10 @@ FCP CMPL: xb 000035cc Err 000fcfc0
 ====
 
 --
-.FC - Marvell/QLogic
+.NVMe/FC - Marvell/QLogic
 --
 
 Configure NVMe/FC for a Marvell/QLogic adapter.
-
-.Steps
 
 . Verify that you are using the supported adapter driver and firmware versions:
 +
@@ -259,12 +255,10 @@ cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
 The expected output is 1.
 --
 
-.TCP
+.NVMe/TCP
 --
 
 The NVMe/TCP protocol does not support the auto-connect operation. You must manually perform the NVMe/TCP connect or connect-all operations to discover the NVMe/TCP subsystems and namespaces.
-
-.Steps
 
 . Check that the initiator port can get the discovery log page data across the supported NVMe/TCP LIFs:
 +
@@ -564,7 +558,7 @@ include::_include/nvme/nvme-validate-nvme-of-rocky-linux.adoc[]
 
 == Step 7: Set up secure in-band authentication
 
-Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a Rocky Linux 9.6 host and an ONTAP controller.
+Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a Rocky Linux 9.x host and an ONTAP controller.
 
 Each host or controller must be associated with a `DH-HMAC-CHAP` key to set up secure authentication. A `DH-HMAC-CHAP` key is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
 
@@ -583,7 +577,7 @@ Set up secure in-band authentication using the CLI.
 ----
 cat /etc/nvme/hostnqn
 ----
-. Generate the dhchap key for the Rocky Linux 9.6 host.
+. Generate the dhchap key for the Rocky Linux 9.x host.
 +
 The following output describes the `gen-dhchap-key` command parameters:
 +
