--- a/nvme-rockylinux-supported-features.adoc
+++ b/nvme-rockylinux-supported-features.adoc
@@ -59,11 +59,11 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 
 |If your Rocky Linux version is .. | Learn about ..
 |10 series
-|link:nvme-rockylinux-10x.html[Configuring NVMe for Rocky Linux 10x]
+|link:nvme-rockylinux-10x.html[Configuring NVMe for Rocky Linux 10.x]
 |9 series
-|link:nvme-rockylinux-9x.html[Configuring NVMe for Rocky Linux 9x]
+|link:nvme-rockylinux-9x.html[Configuring NVMe for Rocky Linux 9.x]
 |8 series
-|link:nvme-rockylinux-8x.html[Configuring NVMe for Rocky Linux 8x]
+|link:nvme-rockylinux-8x.html[Configuring NVMe for Rocky Linux 8.x]
 |===
 
 .Related information
