--- a/nvme-rockylinux-9x.adoc
+++ b/nvme-rockylinux-9x.adoc
@@ -17,9 +17,9 @@ include::_include/nvme/nvme-rocky-linux-introduction.adoc[]
 
 Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 9.x. For more support and feature information, see link:nvme-rockylinux-supported-features.html[Rocky Linux ONTAP support and features].
 
-*NVMe-oF with Rocky Linux 9.x has the following known limitations:*
+NVMe-oF with Rocky Linux 9.x has the following known limitations:
 
-* Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
+* The `nvme disconnect-all` command disconnects both root and data filesystems and might lead to system instability. Do not issue this on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces.
 
 == Step 1: Optionally, enable SAN booting
 
@@ -558,7 +558,7 @@ include::_include/nvme/nvme-validate-nvme-of-rocky-linux.adoc[]
 
 == Step 7: Set up secure in-band authentication
 
-Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a Rocky Linux 9.x host and an ONTAP controller.
+Secure in-band authentication is supported over NVMe/TCP between a Rocky Linux 9x host and an ONTAP controller.
 
 Each host or controller must be associated with a `DH-HMAC-CHAP` key to set up secure authentication. A `DH-HMAC-CHAP` key is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
 
