--- a/_include/nvme/verify-software-version-introduction.adoc
+++ b/_include/nvme/verify-software-version-introduction.adoc
@@ -1,1 +1,1 @@
-To configure your host for NVMe-oF you should install the host and NVMe software packages, enable multipathing, and verify your host NQN configuration.
+To configure your host for NVMe-oF you need to install the host and NVMe software packages, enable multipathing, and verify your host NQN configuration.
