--- a/nvme-proxmox-ve-8x.adoc
+++ b/nvme-proxmox-ve-8x.adoc
@@ -477,9 +477,35 @@ include::_include/nvme/ctrl-loss-tmo-default-off.adoc[]
 --
 =====
 
-== Step 3: Optionally, enable 1MB I/O 
+== Step 3: Optionally, enable 1MB I/O for NVMe/FC
 
-include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
+ONTAP reports a Max Data Transfer Size (MDTS) of 8 in the Identify Controller data. This means the maximum I/O request size can be up to 1MB. To issue I/O requests of size 1MB for a Broadcom NVMe/FC host, you should increase the `lpfc` value of the `lpfc_sg_seg_cnt` parameter to 256 from the default value of 64.
+
+NOTE: These steps don't apply to Qlogic NVMe/FC hosts.
+
+.Steps
+
+. Set the `lpfc_sg_seg_cnt` parameter to 256:
++
+[source,cli]
+----
+cat /etc/modprobe.d/lpfc.conf 
+----
++
+You should see an output similar to the following example:
++
+----
+options lpfc lpfc_sg_seg_cnt=256
+----
+
+. Run the `update-initramfs` command, and reboot the host.
+
+. Verify that the value for `lpfc_sg_seg_cnt` is 256:
++
+[source,cli]
+----
+cat /sys/module/lpfc/parameters/lpfc_sg_seg_cnt 
+----
 
 == Step 4: Verify NVMe boot services 
 
